new thing brother

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<meta name="google-site-verification" content="Ft_JGklfIx9L3u9NghxPmydI63jaiYbZmdY7pTSNhZg" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connect with IAM MAFAH</title>
@@ -1023,4 +1024,5 @@
         observer.observe(testimonialBox);
     </script>
 </body>
+
 </html>
