--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Exo:wght@300;400;600&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <meta name="description" content="connect with iammafah--easily">
+
+    <!-- Favicon -->
+    <link rel="icon" href="https://img.freepik.com/free-vector/gradation-m-letter-logo-design_557339-335.jpg" sizes="32x32" type="image/jpeg">
+
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+     "@type": "Organization",
+      "name": "Iam mafah",
+      "url": "https://abucodehub.github.io/personal-brandin/",
+      "logo": "https://img.freepik.com/free-vector/gradation-m-letter-logo-design_557339-335.jpg"
+
+    }
+    </script>
     <style>
         :root {
             --bg-dark: #0a0a0a;
@@ -1027,4 +1044,5 @@
 </body>
 
 </html>
+
 
